--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/bootstrap-vue": "^2.0.2",
+    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-vue": "^1.0.0",
     "normalize.css": "^7.0.0",
     "nuxt": "^1.0.0-rc11"
   },
