--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.0.0",
     "normalize.css": "^7.0.0",
