--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.0.0",
     "normalize.css": "^7.0.0",
-    "nuxt": "^1.0.0-rc11"
+    "nuxt": "^1.0.0-rc11",
+    "vue-smooth-scroll": "^1.0.13"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
